added contact form

--- a/posts/1.md
+++ b/posts/1.md
@@ -5,7 +5,7 @@ excerpt: 'Welcome to my first website! In this post, i will share wiith you guys
 cover_image: '/images/posts/img1.jpg'
 ---
 
-## Heading Two
+## Stacks
 
-- item 1
+- NextJs
 - item 1
